--- a/templates/results.html
+++ b/templates/results.html
@@ -8,7 +8,7 @@
 <body>
     <section class="principal">
         <h1 class="titulo_principal">Designações Carrinho</h1>
-        <section class="estilo">
+        <section class="estilo oculto">
             <div>
                 <label for="mes">Escolha uma cor:</label>
                 <input type="color" id="inputColor">
