--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: #f8f9fa;
-    width: 1920px;
+    width: 100%;
     height: 1223px;
     margin: 0 auto;
 }
@@ -55,7 +55,7 @@ select{
 
 .tabela{
     background-color: #f5f5f5;;
-    width: 615px;
+    width: 539px;
     border: solid 1px rgb(201, 201, 201);
 }
 
